Fix active image button showing on smaller screen.

--- a/components/Gallery.css
+++ b/components/Gallery.css
@@ -27,7 +27,7 @@ div.fullviewinfo {
 }
 
 @media (max-width: 991px) {
-	img.active {
+	a.active {
 		display: none;
 	}
 }
